--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"author": "Pepekid",
 	"license": "ISC",
 	"dependencies": {
+		"dotenv": "^16.4.5",
 		"express": "^4.18.2",
 		"mysql2": "^3.9.1",
 		"pug": "^3.0.2",
